--- a/21/index.html
+++ b/21/index.html
@@ -7,7 +7,8 @@
         <h1>プログラム例</h1>
         <div>
         <input type="text" id="text01"><br>
-        <button onclick="keisan()">クリックしてね
+
+        <button onclick="kurikaeshi()">クリックしてね
         </button>
         
         <div>
