--- a/25/index.html
+++ b/25/index.html
@@ -23,7 +23,7 @@
     <body onload="hajime()"onkeydown="ugokasu(event)">
 
         <div style="position: absolute; left: 20px; top: 10px;">
-            <h1>落ちものパズル</h1>
+            <h1>TETRIS<br>arenzi</h1>
             <div style="width: 380px;">
                  スコア:<span id="tokuten">0</span>
             </div>
@@ -36,8 +36,27 @@
         style="position: absolute;left: 300px; top: 150px; background-color: black"></canvas>     
         <button id="kaishibtn"
         style="position: absolute;left:300px; top: 300px; width: 80px;height: 50px" onclick="gamekaishi()">
-                   ゲーム<br>スタート
+            ゲーム<br>スタート
         </button>
+        <button  style="position: absolute;left:750px; top: 550px; width: 50px;height: 50px" onclick="shitaidou()">
+            ↓
+        </button>
+        <button  style="position: absolute;left:700px; top: 550px; width: 50px;height: 50px" onclick="ugokasu({keyCode: 37})">
+            ←
+        </button>
+        <button>
+        <button  style="position: absolute;left:800px; top: 550px; width: 50px;height: 50px" onclick="ugokasu({keyCode: 39})">
+            →
+        </button>
+        <button>
+        <button  style="position: absolute;left:750px; top: 500px; width: 50px;height: 50px" onclick="ugokasu({keyCode: 38})">
+            ↑
+        </button>
+        <button>
+            <button  style="position: absolute;left:600px; top: 150px; width: 500px;height: 200px">
+            このTETRIS ARENZIにはキーボードで遊ぶのと<br>スマホで遊ぶ用の二つのモードがあります<br>パソコンのほうではどちらのモードでも遊べます
+            </button>
+        
     </body>
 </html>       
     
